feat: Add basic population data into DB, add board api for backend
